made some changes on the appointment partial

--- a/client/partials/appointment.html
+++ b/client/partials/appointment.html
@@ -1,6 +1,6 @@
 <div ng-app = 'myApp' ng-controller = 'appointmentController'>
 	<div id = 'side'>
-		<h4>Doctor's Appointments</h4>
+		<h4>Welcome to the Dr. Appointments</h4>
 		<div>
 			Search for Appointment <input placeholder=' Name...' type = 'text' ng-model = 'filter_name'>
 		</div><br><br><br>
