--- a/client/partials/new_appointment.html
+++ b/client/partials/new_appointment.html
@@ -6,7 +6,7 @@
 		<form role="form">
 			<p>Please Sign Up For An Appointment :) <small>It's free and always will be.</small></p>
 			<hr class="colorgraph">
-			<div class="row">
+			<div class=""="row">
 				<div class="col-xs-12 col-sm-6 col-md-6">
 					<div class="form-group">
                         <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="Date..." tabindex="1" ng-model = 'new_appointment.date'>
